src/objects/Change__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TODAY() -   DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this change was already billed to the customer.</description>
        <label>Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeNumber__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Change #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <description>The date being set to Closed or Canceled</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <formula>Project__r.Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <label>Estimation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <description>1 represents the change is closed or cancelled</description>
        <formula>IF( TEXT( Status__c ) = &quot;Closed&quot; || TEXT( Status__c ) = &quot;Cancelled&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opened By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Highest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>MProject__c</referenceTo>
        <relationshipLabel>Changes</relationshipLabel>
        <relationshipName>Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Reopened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Change</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Change</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ChangeNumber__c</columns>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>AssignedTo__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <roleAndSubordinates>CEO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpen</fullName>
        <columns>ChangeNumber__c</columns>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>AssignedTo__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <label>All Open</label>
        <sharedTo>
            <roleAndSubordinates>CEO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Costume_manager</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>DueDate__c</columns>
        <columns>Estimate__c</columns>
        <columns>AssignedTo__c</columns>
        <columns>Priority__c</columns>
        <columns>OpenedBy__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Costume Manager &amp; Studio Director integration</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <label>Costume manager</label>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I80000000P11PEAS_00N80000004LLoXEAW</fullName>
        <active>true</active>
        <errorMessage>Change must be from the same project.</errorMessage>
        <field>TimeCard__c.Change__c</field>
        <filterItems>
            <field>Change__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Time Card_Change</name>
        <sourceObject>TimeCard__c</sourceObject>
    </namedFilters>
    <pluralLabel>Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BilledChangeCannotBeReestimated</fullName>
        <active>true</active>
        <description>Billed change cannot be re-estimated</description>
        <errorConditionFormula>AND(ISCHANGED(Estimate__c), Billed__c)</errorConditionFormula>
        <errorMessage>Billed change cannot be re-estimated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OnlyOpenerOrAdminCanCloseChange</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Status__c), ISPICKVAL(Status__c, &quot;Closed&quot;), OpenedBy__c &lt;&gt; $User.Id, $Profile.Name &lt;&gt; &quot;Platform System Admin&quot;)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Only the change owner or system administrator can close this change</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OpenerCannotBeChanged</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(OpenedBy__c)</errorConditionFormula>
        <errorDisplayField>OpenedBy__c</errorDisplayField>
        <errorMessage>Change opener cannot be changed</errorMessage>
    </validationRules>
</CustomObject>